istio-teaching/envoyfilters/applyto/ext_authz/auth_deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  labels:
    app: auth
spec:
  ports:
  - name: http
    port: 9002
    targetPort: 9002
  selector:
    app: auth
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: auth
  labels:
    app: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          imagePullPolicy: Always
          image: registry.cn-hangzhou.aliyuncs.com/hxpdocker/ext_authz_grpc:latest 
          ports:
          - containerPort: 9002
